# routes/api.php
@@ -1,10 +1,10 @@
 <?php
 
-use App\Http\Controllers\Auth\AuthClientController;
-use App\Http\Controllers\Auth\AuthUserController;
+use App\Http\Controllers\Admin\AuthUserController;
+use App\Http\Controllers\Admin\ClientFavoritesController;
+use App\Http\Controllers\Client\AuthClientController;
 use App\Http\Controllers\Client\FavoriteController;
 use App\Http\Controllers\Client\ProductController;
-use App\Http\Controllers\User\UserFavoriteController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('client')->group(function () {
@@ -24,7 +24,7 @@ Route::prefix('client')->group(function () {
     });
 });
 
-Route::prefix('user')->group(function () {
+Route::prefix('admin')->group(function () {
     Route::post('login', [AuthUserController::class, 'login']);
 
     Route::middleware('auth:sanctum')->group(function () {
@@ -32,11 +32,10 @@ Route::prefix('user')->group(function () {
         Route::post('logout', [AuthUserController::class, 'logout']);
 
         Route::prefix('clients/{client}')->group(function () {
-            Route::get('favorites', [UserFavoriteController::class, 'index']);
-            Route::post('favorites/plus', [UserFavoriteController::class, 'plus']);
-            Route::post('favorites/minus', [UserFavoriteController::class, 'minus']);
+            Route::get('favorites', [ClientFavoritesController::class, 'index']);
+            Route::post('favorites/plus', [ClientFavoritesController::class, 'plus']);
+            Route::post('favorites/minus', [ClientFavoritesController::class, 'minus']);
         });
     });
 });
 
-Route::get('test-swagger', [\App\Http\Controllers\TestSwaggerController::class, 'test']);
